--- a/01_선택자(selector)/10_attribute선택자.html
+++ b/01_선택자(selector)/10_attribute선택자.html
@@ -28,26 +28,25 @@
 
 		// 태그의 속성을 이용하여 노드를 선택
 		// class 속성을 가진 노드
-
+    $('*[class]').css('background', 'yellow')
 
 		// href 속성 값이 #page2인 노드
-
+    $('*[href = "#page2"]').css('background', 'pink')
 
 		// href 속성 값이 http로 시작하는 노드
-
+    $('*[href ^= "http"]').css('text-decoration', 'none')
 
 		// href 속성 값이 com으로 끝나는 노드
-
+    $('*[href $= "com"]').css('background', 'red')
 
 		// href 속성 값이  2를 포함하는 노드
-
+    $('*[href $= "com"]').css('background', 'red')
 
 		// src 속성 값이 sample1.jpg 외의 노드
-
+    $('*[src != "sample1.jpg"]').css('background', 'gray')
 
 		// 속성중에 src와 alt를 모두 가지고 있는 노드
-		
-		 
+		$('*[src][alt]').css('border', '5px solid #fff')
 	</script>
 
 
