DOM 조작 with jQuery

--- a/03_DOM변경/06_before.html
+++ b/03_DOM변경/06_before.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title> before( )  </title>
 <!-- jQuery library -->
-<script src="jquery-1.7.2.min.js"></script>
+<script src="../jquery-3.6.0.min.js"></script>
 </head>
  
 <body>
@@ -18,7 +18,7 @@
 
 		// 아이디 container 요소 앞에 "<div>새로이 추가된 형제입니다</div> 추가
 		
-		
+		$('#container').before('<div>새로이 추가된 형제입니다</div>')
 
 	</script>
 	
