--- a/03_DOM변경/03_appendTo.html
+++ b/03_DOM변경/03_appendTo.html
@@ -14,7 +14,8 @@
 	<script>
 	
 		// 선택된 요소를 지정된 요소 내의 뒤로 이동
-		
+    $('p').append($('strong')) // 'p' 에다가 'strong' 삽입
+    $('strong').appendTo($('p')) // 'strong' 을 'p'에 삽입
 		// strong 태그를 p 태그 내 뒤로 이동하시오
 		
 		
