--- a/03_DOM변경/04_prepend활용_03.html
+++ b/03_DOM변경/04_prepend활용_03.html
@@ -1,38 +1,64 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title> prepend활용  </title>
-<!-- jQuery library -->
-<script src="../jquery-3.6.0.min.js"></script><style>
-	img {padding:0px; margin:5px;}
-</style>
+  <meta charset="utf-8">
+  <title> prepend활용 </title>
+  <!-- jQuery library -->
+  <script src="../jquery-3.6.0.min.js"></script>
+  <style>
+    img {
+      padding: 0px;
+      margin: 5px;
+    }
+  </style>
 </head>
- 
+
 <body>
 
-	<div id="container">
-		<img src='pic1.jpg' alt='' width='100' height='100' />
-		<img src='pic2.jpg' alt='' width='100' height='100' />
-		<img src='pic3.jpg' alt='' width='100' height='100' />
-	</div>
-	<p> prepend를 사용하여 사진을 순환합니다. </p>
-	<button id="prepend" title="prepend">prepend</button>
-	<button id="append" title="append">append</button>
-	
-	<!---------- jQuery code Start ---------->
-	<script>
-	 
-		// 버튼 클릭시 맨 앞의 이미지와 마지막 이미지를 이동한다
-		
-		
-		
+  <div id="container">
+    <img src='pic1.jpg' alt='' width='100' height='100' />
+    <img src='pic2.jpg' alt='' width='100' height='100' />
+    <img src='pic3.jpg' alt='' width='100' height='100' />
+  </div>
+  <p> prepend를 사용하여 사진을 순환합니다. </p>
+  <button id="prepend" title="prepend">prepend</button>
+  <button id="append" title="append">append</button>
 
-	</script>
-	
-	
-	
-	
+  <!---------- jQuery code Start ---------->
+  <script>
+    // 버튼 클릭시 맨 앞의 이미지와 마지막 이미지를 이동한다
+    // $('#prepend').on('click', function () {
+    //   $('#container').prepend($('#container img:last'))
+    // })
+
+    // $('#append').on('click', function () {
+    //   $('#container').append($('#container img:first'))
+    // })
+
+
+
+
+    // in vanilla js
+
+    const 
+    preBtn = document.getElementById('prepend'),
+    appBtn = document.getElementById('append'),
+    container = document.getElementById('container');
+
+    
+    preBtn.addEventListener('click', () => {
+      container.prepend(container.children[container.childElementCount-1])
+    })
+    appBtn.addEventListener('click', () => {
+      container.append(container.children[0])
+    })
+  </script>
+
+
+
+
 
 </body>
+
 </html>
