--- a/03_DOM변경/07_wrapAll.html
+++ b/03_DOM변경/07_wrapAll.html
@@ -4,19 +4,21 @@
 <meta charset="utf-8">
 <title> wrapAll( )  </title>
 <!-- jQuery library -->
-<script src="jquery-1.7.2.min.js"></script>
+<script src="../jquery-3.6.0.min.js"></script>
 </head>
  
 <body>
 
 	<strong>제목이 되고 싶어요</strong>
+  <em>제목이 되지 않아요</em>
 	<strong>제목이 되고 싶어요 </strong>
 
 	<!---------- jQuery code Start ---------->
 	<script>
 
 		// wrapAll()은 선택된 요소 전체를 지정된 html 구조로 감싼다
-		
+		// $('strong').wrap('<h1></h1>') // 각각의 strong 태그를 감싼다.
+    $('strong').wrapAll('<h1></h1>') // 모든 strong태그를 h1 태그 하나로 감싼다.
 		// strong태그 모두를 h1 태그로 감싼다
 		
 		
