--- a/03_DOM변경/07_wrapInner.html
+++ b/03_DOM변경/07_wrapInner.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title> wrapInner( )  </title>
 <!-- jQuery library -->
-<script src="jquery-1.7.2.min.js"></script>
+<script src="../jquery-3.6.0.min.js"></script>
 </head>
  
 <body>
@@ -15,7 +15,7 @@
 	<script>
 
 		// wrapInner()는 선택된 요소를 지정된 html 구조로 각각 감싼다
-		
+		$('p').wrapInner('<strong></strong>')
 		// p 태그 내 텍스트를 strong 태그로 감싼다
 		
 		
