--- a/03_DOM변경/08_replaceAll활용.html
+++ b/03_DOM변경/08_replaceAll활용.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title> replaceAll( ) / replaceWith( ) </title>
 <!-- jQuery library -->
-<script src="jquery-1.7.2.min.js"></script>
+<script src="../jquery-3.6.0.min.js"></script>
 </head>
  
 <body>
