--- a/03_DOM변경/08_replaceWith.html
+++ b/03_DOM변경/08_replaceWith.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title> replaceWith ( )  </title>
 <!-- jQuery library -->
-<script src="jquery-1.7.2.min.js"></script>
+<script src="../jquery-3.6.0.min.js"></script>
 </head>
  
 <body>
@@ -16,7 +16,7 @@
 	<script>
 
 		// replaceWith()는 선택된 요소를 지정된 요소로 변경
-		
+		$('p').replaceWith('<strong>변경 후</strong>')
 		// p태그와 내용을 "<strong>변경후</strong>" 으로 변경
 		
 		
