--- a/03_DOM변경/10_empty.html
+++ b/03_DOM변경/10_empty.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title> empty ( )  </title>
-<script src="jquery-1.7.2.min.js"></script>
+<script src="../jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
 
 		// <p> 태그 중의 첫 번째 <p> 태그의 내용을 삭제합니다.
 		// <p> 노드 자체가 제거되지 않습니다.
-		
+		$('.container p:first').empty()
 		// 첫번째 p 태그의 내용을 지우시오
 		
 		
