--- a/03_DOM변경/11_detach.html
+++ b/03_DOM변경/11_detach.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title> detach ( )  </title>
-<script src="jquery-1.7.2.min.js"></script>
+<script src="../jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
 		// remove() 함수와 마찬가지로 노드를 제거한다
 		// 단, DOM에서 제거되었더라고 temp에 임시로 저장이 되어있어 제거와 삽입을 반복할 수 있다
 		// 제거방법 중에서는 remove()가 가장 빠르다
-		
+		$('.container img:first').detach()
 		// 첫번째 이미지를 노드에서 제거하시오	 
 	 
 	 
