--- a/04_HTML_CSS_속성제어/01_CSS_default_예제.html
+++ b/04_HTML_CSS_속성제어/01_CSS_default_예제.html
@@ -22,7 +22,8 @@
       height : 200,
       border : '1px solid #000',
       fontSize : 50,
-      fontWeight : 'bold'
+      fontWeight : 'bold',
+      lineHeight : 4 // 주의, lineHeight는 폰트 사이즈의 배수 단위로 들어간다.
       // 따옴표 없이 카멜케이스로 적을 수 있다. 또 px단위의 경우 따옴표와 px 생략 가능.
       // 리액트에서 쓰는 jsX와 유사
     })
