--- a/04_HTML_CSS_속성제어/02_attr_예제_03.html
+++ b/04_HTML_CSS_속성제어/02_attr_예제_03.html
@@ -16,7 +16,8 @@
 	<script>
 		
 		// http://jquery.com으로 연결하는 링크를 추가하고
-		
+		$('div a').attr('href', 'https://www.jquery.com')
+    $('div a').text($('div a').attr('href'))
 		// 제이쿼리닷컴을 http://jquery.com으로 변경
 		
 		
