--- a/04_HTML_CSS_속성제어/03_removeAttr.html
+++ b/04_HTML_CSS_속성제어/03_removeAttr.html
@@ -13,7 +13,7 @@
 
 	<!---------- jQuery code Start ---------->
 	<script>
-		
+		$('div a').removeAttr('target')
 		// $( "selector" ).removeAttr( "properties");
 		
 			
