--- a/04_HTML_CSS_속성제어/04_addClass_01.html
+++ b/04_HTML_CSS_속성제어/04_addClass_01.html
@@ -1,40 +1,66 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title> addClass() </title>
-<script src="jquery-3.6.0.min.js"></script>
-<style>
- 
-	img { padding:5px; background:#666;}
 
-	img.type1 { padding:5px; background: orange;}
-	img.type2 { padding:5px; background: blue;}
-	img.type3 { padding:5px; background: pink;}
-  
-</style>
+<head>
+  <meta charset="utf-8">
+  <title> addClass() </title>
+  <script src="jquery-3.6.0.min.js"></script>
+  <style>
+    img {
+      padding: 5px;
+      background: #666;
+    }
+
+    img.type1 {
+      padding: 5px;
+      background: orange;
+    }
+
+    img.type2 {
+      padding: 5px;
+      background: blue;
+    }
+
+    img.type3 {
+      padding: 5px;
+      background: pink;
+    }
+  </style>
 </head>
 
 <body>
-	<img src="th1.jpg" alt="" />
-	<img src="th2.jpg" alt="" />
-	<img src="th3.jpg" alt="" />
+  <img src="th1.jpg" alt="" />
+  <img src="th2.jpg" alt="" />
+  <img src="th3.jpg" alt="" />
 
-	<!---------- jQuery code Start ---------->
+  <!---------- jQuery code Start ---------->
 
-	<script>
+  <script>
+    // 이미지 클릭시 클래스 type1을 추가하고,
+    // 이미지 한개씩 type1이 추가되도록 하시오
+    // $(this) 활용
+    // $('img').on('click', function() {
+    //   // $(this).attr('class','type1') 
+    //   $(this).addClass('type1')
+    // })
 
-		// 이미지 클릭시 클래스 type1을 추가하고,
-		// 이미지 한개씩 type1이 추가되도록 하시오
-		// $(this) 활용
-		
+    const imgs = document.querySelectorAll('img') 
+    imgs.forEach((el, i) => {
+      el.addEventListener('click', (e) => {
+        e.currentTarget.classList.add(`type${i+1}`) 
+      })
+    })
 
-	</script>
-	
-	
-	
-	
-	
+
+
+    // js setAttr 및 클래스 삽입 복습하기
+  </script>
+
+
+
+
+
 
 </body>
+
 </html>
