--- a/04_HTML_CSS_속성제어/05_removeClass_01.html
+++ b/04_HTML_CSS_속성제어/05_removeClass_01.html
@@ -1,40 +1,57 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title> addClass_removeClasss </title>
-<script src="jquery-3.6.0.min.js"></script>
-<style>
- 
-	img { padding:5px; background:#666; }
+  <meta charset="utf-8">
+  <title> addClass_removeClasss </title>
+  <script src="jquery-3.6.0.min.js"></script>
+  <style>
+    img {
+      padding: 5px;
+      background: #666;
+    }
 
-	img.type1 { padding:5px; background: orange; }
-	img.type2 { padding:5px; background: blue; }
-	img.type3 { padding:5px; background: pink; }
+    img.type1 {
+      padding: 5px;
+      background: orange;
+    }
 
-</style>
+    img.type2 {
+      padding: 5px;
+      background: blue;
+    }
+
+    img.type3 {
+      padding: 5px;
+      background: pink;
+    }
+
+    img.type5 {
+      background: green;
+    }
+  </style>
 </head>
 
 <body>
 
-	<img src="th1.jpg" alt="" class="type1" />
-	<img src="th2.jpg" alt="" class="type2" />
-	<img src="th3.jpg" alt="" class="type3" />
+  <img src="th1.jpg" alt="" class="type1" />
+  <img src="th2.jpg" alt="" class="type2" />
+  <img src="th3.jpg" alt="" class="type3" />
 
-	<!---------- jQuery code Start ---------->
+  <!---------- jQuery code Start ---------->
 
-	<script>
+  <script>
+    // 클릭한 이미지의 클래스만 삭제
+    // 동시에 클래스 type5를 추가하시오
+    $('img').on('click', function() {
+      $(this).removeClass().addClass('type5')
+    })
+  </script>
 
-		// 클릭한 이미지의 클래스만 삭제
-		// 동시에 클래스 type5를 추가하시오
-		
-		
 
-	</script>
-	
-	
-	
-	
+
+
 
 </body>
+
 </html>
