--- a/04_HTML_CSS_속성제어/07_toggleClass.html
+++ b/04_HTML_CSS_속성제어/07_toggleClass.html
@@ -26,7 +26,9 @@
 	<!---------- jQuery code Start ---------->
 
 	<script>
-
+    $('img').on('click', function() {
+      $(this).toggleClass('type1')
+    })
 		// toggleClass는 addClass와 removeClass를 번갈아가며 실행
 		
 		
