--- a/05_기본이벤트/01_click_02.html
+++ b/05_기본이벤트/01_click_02.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>click()</title>
-<script src="jquery-1.7.2.min.js"></script>
+<script src="jquery-3.6.0.min.js"></script>
 </head>
 <body>
 
@@ -15,7 +15,13 @@
 	<script type="text/javascript">
 
 		// a 태그를 클릭시 꽃 이미지를 바다 이미지로 변경하시오
-		
+		$('a').on('click', function (e) {
+      e.preventDefault();
+      $('img').attr({
+        src: 'sea.jpg',
+        alt: '바다'
+      })
+    })
 		
 			
 		
