--- a/05_기본이벤트/01_click_03.html
+++ b/05_기본이벤트/01_click_03.html
@@ -1,31 +1,46 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>click()</title>
-<script src="jquery-1.7.2.min.js"></script>
+  <meta charset="utf-8">
+  <title>click()</title>
+  <script src="jquery-3.6.0.min.js"></script>
 </head>
+
 <body>
-	<ul>
-		<li><a href="flower.jpg">꽃</a></li>
-		<li><a href="sea.jpg">바다</a></li>
-		<li><a href="Jellyfish.jpg">해파리</a></li>
-		<li><a href="Building.jpg">건물</a></li>
-	</ul>
-	<p><img src="flower.jpg" alt="꽃" /></p>	
-	
-	<!---------- jQuery code Start ---------->
-	<script type="text/javascript">
-	 
-		// 리스트를 클릭할 때마다 이미지를 그 리스트의 이미지로 변경하시오
-		
-		
-		
-	</script>
+  <ul>
+    <li><a href="flower.jpg">꽃</a></li>
+    <li><a href="sea.jpg">바다</a></li>
+    <li><a href="Jellyfish.jpg">해파리</a></li>
+    <li><a href="Building.jpg">건물</a></li>
+  </ul>
+  <p><img src="flower.jpg" alt="꽃" /></p>
+
+  <!---------- jQuery code Start ---------->
+  <script type="text/javascript">
+    // 리스트를 클릭할 때마다 이미지를 그 리스트의 이미지로 변경하시오
+    // $('a').on('click', function (e) {
+    //   e.preventDefault();
+    //   console.log(this.parent)
+    //   $('img').attr({
+    //     src: `${this.href}`,
+    //     alt: `${this.text}` //jquery에서는 innerText 필요없이 text만으로 가능
+    //   })
+    // })
+
+    $('li').on('click', function (e) {
+      e.preventDefault();
+      $('img').attr({
+        src: `${$(this).children('a').attr('href')}`,
+        alt: `${$(this).children('a').text()}` //jquery에서는 innerText 필요없이 text만으로 가능
+      })
+    })
+  </script>
 
 
 
 
 
 </body>
+
 </html>
