--- a/05_기본이벤트/02_dblclick_03.html
+++ b/05_기본이벤트/02_dblclick_03.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>dblclick()</title>
-<script src="jquery-1.7.2.min.js"></script>
+<script src="jquery-3.6.0.min.js"></script>
 </head>
 <body>
 
@@ -20,7 +20,16 @@
 	<script type="text/javascript">
 
 		// 리스트(a 태그)를 클릭시 해당 이미지로 변경하시오
-		
+
+		$('li').on('dblclick', function(e){
+      e.preventDefault(); // dblclick에만 적용돼서, click 에도 preventDefault를 적용해야한다.
+      $('img').attr({
+        src : $(this).children('a').attr('href'),
+        alt : $(this).children('a').text()
+      })
+    }).on('click', function(e){
+      e.preventDefault();
+    })
 		
 		
 	</script>
