jquery 버전에 따른 toggle 사용

--- a/05_기본이벤트/05_toggle.html
+++ b/05_기본이벤트/05_toggle.html
@@ -18,7 +18,7 @@
   <!---------- jQuery code Start ---------->
   <script type="text/javascript">
     // button을 클릭할때마다 바다, 해파리, 건물, 꽃 이미지를 순서대로 로드하시오
-    $('button').toggle(
+    $('button').toggle( // toggle(함수, 함수, 함수) 함수를 차례대로 실행해준다.
       function() {
       $('p img').attr({
         src : 'sea.jpg',
