--- a/05_기본이벤트/07_hover.html
+++ b/05_기본이벤트/07_hover.html
@@ -13,7 +13,12 @@
 	<script type="text/javascript">
 
 		// mouseenter와 mouseleave 이벤트들을 한번에 bind
-			
+    // 1. mouseenter 2. mouseleave 순으로 작성
+		$('img').hover(function(){
+      $(this).attr({src:'sea.jpg', alt:'바다'})
+    }, function(){
+      $(this).attr({src:'building.jpg', alt:'빌딩'})
+    })
 		// $("선택자").hover( function( ) {    }, function {     } );
 		
 		// 이미지 롤오버시 바다와 빌딩이미지를 로드하시오
