--- a/03_DOM변경/03_append활용_01.html
+++ b/03_DOM변경/03_append활용_01.html
@@ -43,6 +43,7 @@
     // })
     //피드백 받은 내용은,
     btn.addEventListener('click', () => {
+      // container.append(container.firstChild) 라고 썼었는데...
       container.append(container.children[0])
     })
     // 클릭했을 때, 태그요소 기준인 children 사용한 첫 번째 요소를, append 해준다.
