--- a/05_기본이벤트/10_unbind.html
+++ b/05_기본이벤트/10_unbind.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>unbind()</title>
-<script src="jquery-1.7.2.min.js"></script>
+<script src="jquery-3.6.0.min.js"></script>
 </head>
 <body>
 
@@ -26,8 +26,20 @@
 
 		// 리스트(a태그) 클릭시 이미지 바뀌도록
 		// 버튼을 클릭하면 a 태그에 설정된 이벤트 취소
+    // $('li').bind(function(e) {)
+      // $('li').click(function(e) {)
+		$('li').on('click', function(e) {
+      e.preventDefault();
+      $('p img').attr({
+        src : $(this).children('a').attr('href'),
+        alt : $(this).text() // text는 li도 가지고 있기 때문에 생략 가능
+      })
+    })
 
-		
+    $('button').on('click', function() {
+      // $('li').unbind()
+      $('li').off()
+    })
 			
 		
 	</script>
