--- a/05_기본이벤트/실전예제/할인율당첨/ready.html
+++ b/05_기본이벤트/실전예제/할인율당첨/ready.html
@@ -1,24 +1,32 @@
 ﻿<!DOCTYPE html>
 <html>
-	<head> 
-        <meta charset="utf-8" />
-		<title>Jump for Joy</title> 
-		<link href="styles/my_style.css" rel="stylesheet">		
-		<script src="scripts/jquery-1.7.2.min.js"></script>
-		<script>
-            // 할 일 목록
 
-		</script>
-	</head> 
-	<body> 
-		<div id="header">
-			<h2>Jump for Joy Sale</h2>
-		</div>
-		<div id="main">
-			<div class="guest_box"><img src="images/jump1.jpg"/></div>
-			<div class="guest_box"><img src="images/jump2.jpg"/></div>
-			<div class="guest_box"><img src="images/jump3.jpg"/></div>
-			<div class="guest_box"><img src="images/jump4.jpg"/></div>
-		</div>
-	</body>
+<head>
+  <meta charset="utf-8" />
+  <title>Jump for Joy</title>
+  <link href="styles/my_style.css" rel="stylesheet">
+  <script src="../../jquery-3.6.0.min.js"></script>
+  <script>
+    // 할 일 목록
+    $(document).ready(function () {
+      $('.guest_box').on('click', function () {
+        $('#main').append(`<p>Your Discount is ${Math.ceil(Math.random() * 5) * 10}%</p>`);
+        $('.guest_box').off()
+      })
+    })
+  </script>
+</head>
+
+<body>
+  <div id="header">
+    <h2>Jump for Joy Sale</h2>
+  </div>
+  <div id="main">
+    <div class="guest_box"><img src="images/jump1.jpg" /></div>
+    <div class="guest_box"><img src="images/jump2.jpg" /></div>
+    <div class="guest_box"><img src="images/jump3.jpg" /></div>
+    <div class="guest_box"><img src="images/jump4.jpg" /></div>
+  </div>
+</body>
+
 </html>
