jquery ui easing

--- a/07_jQueryUI/animateColor/animateColor_02.html
+++ b/07_jQueryUI/animateColor/animateColor_02.html
@@ -1,42 +1,70 @@
 ﻿<!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title> animateColor </title>
-<!-- jQuery library -->
-<script src="jquery-1.7.2.min.js"></script>
 
-<style>
-ul { min-width:800px; }
-li {list-style:none; float:left;width:200px; height:60px;}
-li a{
-    background:#9AB92E;
-	width:200px;
-	height:60px;
-	display:block;
-	text-align:center;
-	color:black;
-	padding:40px 0px 10px;
-	font:bold 25px Verdana, Geneva, sans-serif;
-	text-decoration: none;
-}
-</style>
+<head>
+  <meta charset="utf-8">
+  <title> animateColor </title>
+  <!-- jQuery library -->
+  <script src="jquery-3.6.0.min.js"></script>
+  <script src="./jquery-ui.min.js"></script>
+
+  <style>
+    ul {
+      min-width: 800px;
+    }
+
+    li {
+      list-style: none;
+      float: left;
+      width: 200px;
+      height: 60px;
+    }
+
+    li a {
+      background: #9AB92E;
+      width: 200px;
+      height: 60px;
+      display: block;
+      text-align: center;
+      color: black;
+      padding: 40px 0px 10px;
+      font: bold 25px Verdana, Geneva, sans-serif;
+      text-decoration: none;
+    }
+  </style>
 </head>
 
 <body>
-<ul>
+  <ul>
     <li><a href="#" data-bg="#EF4018">Home</a></li>
     <li><a href="#" data-bg="#00C8C3">About</a></li>
     <li><a href="#" data-bg="#AA184D">portfolio</a></li>
     <li><a href="#" data-bg="#05184D">Contact</a></li>
-</ul>
-<!---------- jQuery code Start ---------->
-<script>
+  </ul>
+  <!---------- jQuery code Start ---------->
+  <script>
 
-	// 각 메뉴(li)에 롤오버시 data-bg의 값에 설정된 색상으로 변하는 애니메이션
-	
-	
-	
-</script>
+    // 1. mouseenter, mouseleave 사용
+
+    // 각 메뉴(li)에 롤오버시 data-bg의 값에 설정된 색상으로 변하는 애니메이션
+    // $('li').on('mouseenter', function() {
+    //   let a = $(this).children('a');
+    //   a.animate({backgroundColor : a.attr('data-bg'), color : 'white'}, 300)
+    // }).on('mouseleave', function() {
+    //   $(this).children('a').animate({backgroundColor : '#9AB92E', color : 'black'}, 300)
+    // })
+
+    // 2. hover 사용
+
+    $('li').hover( function() {
+      let a = $(this).children('a');
+      a.stop().animate({backgroundColor : a.data('bg'), color : 'white'}, 300) // jQuery에서는 a.attr('data-bg') => a.data('bg')이 가능하다. data()라는 메소드가 존재하기 때문이다.
+    }, function() {
+      $(this).children('a').stop().animate({backgroundColor : '#9AB92E', color : 'black'}, 300)
+    })
+
+    //:not(:animated)가 잘 안먹는다... 그래서 stop()을 사용한다!
+  </script>
 </body>
+
 </html>
