--- a/08_실전예제/01_gallery/01_페이딩을이용한갤러리/ready.html
+++ b/08_실전예제/01_gallery/01_페이딩을이용한갤러리/ready.html
@@ -44,6 +44,11 @@
     #main img {
       position: absolute;
       border: 3px solid white;
+      animation: fading 1s forwards;
+    }
+    @keyframes fading {
+      0% {opacity: 0;}
+      100% { opacity: 1;}
     }
   </style>
 </head>
@@ -77,36 +82,49 @@
     /* 할 일 목록
 		
 		Tip1. opacity를 이용하여 이미지 전환되도록 한다.
-		
 		Tip2. 아이디가 main인 img 태그의 css 속성 중 position 속성을 이용
 			  (position:absolute를 사용하면 겹쳐있는 요소들은 뒤에 나오는 요소가 위에 보이게 된다)
 		
 		1. 리스트  이미지 중 하나를 클릭하면 현재 있는 이미지가 페이딩을 이용해 사라지도록 한다
-		
 		2. 동시에 아이디가 main이 요소내의 맨 앞에 이미지를 추가한다
 			추가될 때의 이미지 src 속성은 클릭한 a 태그의 href 속성이 되도록 한다
-			
 			이때 추가된 이미지의 z-index 값은 얼마일까?	
-		
 		3. 페이딩될때 요소가 완전히 제거된게 아니라 opacity:0만 적용된 상태이므로
 			페이딩될때 현재 요소를 제거한다
-			
 		4. a 태그의 값을 제거
 		*/
 
-    $('ul li').on('click', function(e){
-      e.preventDefault();
-      let a = $(this).children('a');
-      $('#main').prepend(`<img src="${a.attr('href')}" alt="${a.children('img').attr('alt')}"/>`)
-      $('#main img:eq(1)').animate({opacity: 0}, 1000, function() {// 여러번 누르면 eq와 last의 차이가 드러난다.
-        $(this).remove()
-      }) 
-    })
+    // $('ul li').on('click', function(e){
+    //   e.preventDefault();
+    //   let a = $(this).children('a');
+    //   $('#main').prepend(`<img src="${a.attr('href')}" alt="${a.children('img').attr('alt')}"/>`)
+    //   $('#main img:eq(1)').animate({opacity: 0}, 500, function() {// 여러번 누르면 eq와 last의 차이가 드러난다.
+    //     $(this).remove()
+    //   }) 
+    // })
     /*
       여러번 눌러서 이벤트가 중첩됐을 때!
       :last : 추가된 상태의 마지막 요소만 제거하고고 끝.
       :eq() : eq1이 삭제되면 dom이 바뀌었다고 판단, 다시 eq1에 해당되는 요소를 찾아 코드를 실행한다.
     */ 
+
+    // in vanilla JS
+    const imgSelect = document.querySelectorAll('ul li > a');
+    const main = document.getElementById('main');
+    imgSelect.forEach((el, i) => {
+      el.addEventListener('click', (e) => {
+        e.preventDefault();
+        let newImg = document.createElement('img');
+        newImg.setAttribute('src', el.href);
+        newImg.setAttribute('alt', el.children[0].alt)
+        main.append(newImg)
+        setTimeout(() => {
+          main.children[0].remove()
+        }, 1000); // 된다! 그치만 콜백으로 줄 수는 없을까?
+      })
+    })
+
+
   </script>
 
 </body>
