--- a/08_실전예제/02_naviation/03/ready_2.html
+++ b/08_실전예제/02_naviation/03/ready_2.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title> 슬라이딩 내비게이션(바네이 메뉴) </title>
-  <script type="text/javascript" src="jquery-1.7.2.min.js"></script>
+  <script type="text/javascript" src="./jquery-3.6.0.min.js"></script>
 
   <style>
     body {
