li 추가 ( css, 클래스 부여도 자동화 해보기)

--- a/08_실전예제/02_naviation/03/100롤링/ready.html
+++ b/08_실전예제/02_naviation/03/100롤링/ready.html
@@ -14,13 +14,19 @@
   <div id="sliderWrap">
     <ul id="sliderList">
       <li class="slider slider1">
-        <div>꽃</div>
+        <div>1</div>
       </li>
       <li class="slider slider2">
-        <div>나뭇잎</div>
+        <div>2</div>
       </li>
       <li class="slider slider3">
-        <div>나비</div>
+        <div>3</div>
+      </li>
+      <li class="slider slider4">
+        <div>4</div>
+      </li>
+      <li class="slider slider5">
+        <div>5</div>
       </li>
     </ul>
     <div id="posBtn">
@@ -31,6 +37,8 @@
       <a href="#" class="num1 active">1</a>
       <a href="#" class="num2">2</a>
       <a href="#" class="num3">3</a>
+      <a href="#" class="num4">4</a>
+      <a href="#" class="num5">5</a>
     </div>
   </div>
 </body>
