--- a/08_실전예제/02_naviation/03/100롤링/ready.html
+++ b/08_실전예제/02_naviation/03/100롤링/ready.html
@@ -40,6 +40,10 @@
       <a href="#" class="num4">4</a>
       <a href="#" class="num5">5</a>
     </div>
+    <div id="playBtn">
+      <a href="#" class="play">play</a>
+      <a href="#" class="stop">stop</a>
+    </div>
   </div>
 </body>
 </html>
