--- a/09_응용예제/04_메뉴배경슬라이딩/ready.html
+++ b/09_응용예제/04_메뉴배경슬라이딩/ready.html
@@ -93,7 +93,7 @@
       color: #000;
     }
   </style>
-  <script src="jquery-1.7.2.min.js"></script>
+  <script src="../jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
