스크롤 관련 예제

--- a/스크롤관련/index2.html
+++ b/스크롤관련/index2.html
@@ -2,7 +2,7 @@
 <html lang="ko" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>부드러운 스크롤과 스크롤값에 따른 네비게이션 변화</title>
     <link rel="stylesheet" href="css/common2.css">
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="js/common2.js" defer></script>
